2007-12-09  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/head-funkywinter.png,
	data/graphics/sprites/head-funkywinter.xml,
	data/graphics/sprites/head-xmaself.png,
	data/graphics/sprites/head-xmaself.xml: New versions of funky hat
	and elf hat by QOAL.
	
2007-12-04  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/items/generic-santacookie.png,
	data/items.xml: Added a new drop item for the christmas event.

2007-12-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/map.cpp, src/map.h: Fix drawing of very high fringe tiles by
	keeping track of the maximum tile height.
	* src/itemshortcut.h, src/gui/itemshortcutcontainer.h,
	src/gui/itemshortcutcontainer.cpp, src/gui/itemshortcutwindow.cpp,
	src/gui/itemshortcutwindow.h, src/itemshortcut.cpp: Random cleanups.

2007-12-04  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/head-funkywinter.png,
	data/graphics/sprites/head-funkywinter.xml,
	data/graphics/sprites/head-mask.png,
	data/graphics/sprites/head-mask.xml,
	data/graphics/sprites/head-mushroom.png,
	data/graphics/sprites/head-mushroom.xml,
	data/graphics/sprites/head-shroom.png,
	data/graphics/sprites/head-shroom.xml,
	data/graphics/sprites/head-tophat.png,
	data/graphics/sprites/head-tophat.xml,
	data/graphics/sprites/head-xmaself.png,
	data/graphics/sprites/head-xmaself.xml,
	data/graphics/items/armor-head-xmaself.png,
	data/graphics/items/armor-head-mask.png,
	data/items.xml: Added/renamed some headgears for the christmas event.

2007-11-20  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/maps/new_1-1.tmx,
	data/graphics/maps/new_3-1.tmx,
	data/graphics/maps/new_15-1.tmx: Updated desert maps with new
	tiles by Len.

2007-11-16  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/resources/image.cpp: Sped up recoloring of transparent pixels.

2007-11-16  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/log.cpp, src/utils/wingettimeofday.h: Removed useless win32
	implementation of gettimeofday.