@@ -108,9 +108,9 @@ void BeingHandler::handleMessage(MessageIn *msg)
             dstBeing->setWalkSpeed(speed);
             dstBeing->mJob = job;
             hairStyle = msg->readInt16();
-            dstBeing->setVisibleEquipment(
+            dstBeing->setSprite(
                     Being::WEAPON_SPRITE, msg->readInt16());
-            dstBeing->setVisibleEquipment(
+            dstBeing->setSprite(
                     Being::BOTTOMCLOTHES_SPRITE, msg->readInt16());
 
             if (msg->getId() == SMSG_BEING_MOVE)
@@ -121,8 +121,8 @@ void BeingHandler::handleMessage(MessageIn *msg)
             msg->readInt16();  // shield
             headTop = msg->readInt16();
             headMid = msg->readInt16();
-            dstBeing->setVisibleEquipment(Being::HAT_SPRITE, headTop);
-            dstBeing->setVisibleEquipment(Being::TOPCLOTHES_SPRITE, headMid);
+            dstBeing->setSprite(Being::HAT_SPRITE, headTop);
+            dstBeing->setSprite(Being::TOPCLOTHES_SPRITE, headMid);
             hairColor = msg->readInt16();
             msg->readInt16();  // unknown
             msg->readInt16();  // head dir
@@ -263,18 +263,18 @@ void BeingHandler::handleMessage(MessageIn *msg)
                     dstBeing->setHairStyle(id, -1);
                     break;
                 case 2:
-                    dstBeing->setVisibleEquipment(Being::WEAPON_SPRITE, id);
+                    dstBeing->setSprite(Being::WEAPON_SPRITE, id);
                     break;
                 case 3:     // Change lower headgear for eAthena, pants for us
-                    dstBeing->setVisibleEquipment(
+                    dstBeing->setSprite(
                             Being::BOTTOMCLOTHES_SPRITE, id);
                     break;
                 case 4:     // Change upper headgear for eAthena, hat for us
-                    dstBeing->setVisibleEquipment(
+                    dstBeing->setSprite(
                             Being::HAT_SPRITE, id);
                     break;
                 case 5:     // Change middle headgear for eathena, armor for us
-                     dstBeing->setVisibleEquipment(
+                     dstBeing->setSprite(
                             Being::TOPCLOTHES_SPRITE, id);
                     break;
                 case 6:
@@ -316,7 +316,7 @@ void BeingHandler::handleMessage(MessageIn *msg)
             dstBeing->setWalkSpeed(speed);
             dstBeing->mJob = job;
             hairStyle = msg->readInt16();
-            dstBeing->setVisibleEquipment(
+            dstBeing->setSprite(
                     Being::WEAPON_SPRITE, msg->readInt16());
             msg->readInt16();  // item id 2
             headBottom = msg->readInt16();
@@ -337,10 +337,10 @@ void BeingHandler::handleMessage(MessageIn *msg)
             msg->readInt8();   // karma
             dstBeing->setGender(1 - msg->readInt8());   // gender
             dstBeing->setHairStyle(hairStyle, hairColor);
-            dstBeing->setVisibleEquipment(
+            dstBeing->setSprite(
                     Being::BOTTOMCLOTHES_SPRITE, headBottom);
-            dstBeing->setVisibleEquipment(Being::HAT_SPRITE, headTop);
-            dstBeing->setVisibleEquipment(Being::TOPCLOTHES_SPRITE, headMid);
+            dstBeing->setSprite(Being::HAT_SPRITE, headTop);
+            dstBeing->setSprite(Being::TOPCLOTHES_SPRITE, headMid);
 
             if (msg->getId() == SMSG_PLAYER_MOVE)
             {
